--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.testSource>1.8</maven.compiler.testSource>
         <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
+        <scala.version>2.13.1</scala.version>
     </properties>
 
     <name>Aparapi</name>
@@ -101,7 +102,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.13.1</version>
+            <version>${scala.version}</version>
         </dependency>
     </dependencies>
 
@@ -125,7 +126,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>2.12.6</scalaVersion>
+                    <scalaVersion>${scala.version}</scalaVersion>
                 </configuration>
             </plugin>
             <plugin>
